Fixing text and alignment in sidebar text according to icons.

--- a/assets/scss/modules/_sidebar.scss
+++ b/assets/scss/modules/_sidebar.scss
@@ -46,6 +46,10 @@
     }
   }
 
+  #menu-sidebar-left > li > a {
+    padding: 0.2rem 0 0.2rem 0;
+  }
+
   #menu-sidebar-left.dropdown.menu.vertical > li.opens-right > a::after {
     display: none;
   }
